--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <description>morshu's general store</description>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
     </properties>
 
